@@ -6,6 +6,7 @@ Changes in version 1.8.1 beta (2009-08-16):
     operation success/fail.
   
 - Significantly improved compatibility with wxMAC.
+- Added new shape style sfsLOCK_CHILDREN which prevents child shapes' relative position from change if the parent shape is resized.
 - Updated premake build files to work properly also on Mac OS.
 - The thumbnail control (wxSFThumbnail) is refreshed when NULL shape canvas is set.
 - More accurate size change of text shapes.
